syntax="proto3";

package hello;

service Hello {
    rpc Send(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string body = 1;
    string author = 2;
}

message HelloResponse {
    string body = 1;
    string author = 2;
}

service Admin {
    rpc GetRequestCount(GetCountRequest) returns (CounterResponse);
}

message GetCountRequest {}

message CounterResponse {
    uint64 count = 1;
}